login page static added

--- a/quick-order-angular/src/app/login/login.component.html
+++ b/quick-order-angular/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<!-- <div class="d-flex justify-content-center align-items-center vh-100 bg-light">
+<div class="d-flex justify-content-center align-items-center vh-100 bg-light">
   <div class="card p-4 shadow" style="width: 350px;">
     <h3 class="text-center mb-4">Login</h3>
     <form (ngSubmit)="onLogin()">
@@ -29,5 +29,4 @@
       </button>
     </form>
   </div>
-</div> -->
-<h1 style="color:red">Hello Login Page</h1>
+</div>
