--- a/quick-order-angular/src/app/user-panel/user-panel.component.html
+++ b/quick-order-angular/src/app/user-panel/user-panel.component.html
@@ -44,6 +44,48 @@
         <h2 class="mb-0">Items</h2>
         <button class="btn btn-success" (click)="onAddItem()">Add Item</button>
       </div>
+
+      <form *ngIf="showAddForm" class="border p-3 mb-3 bg-light rounded" (ngSubmit)="submitNewItem()">
+        <div class="row g-2">
+          <div class="col-md-2">
+            <select class="form-control" [(ngModel)]="newItem.categoryId" name="categoryId" required>
+              <option value="" disabled selected>Select Category</option>
+              <option *ngFor="let cat of categories" [value]="cat.id">{{cat.name}}</option>
+            </select>
+          </div>
+          <div class="col-md-2">
+            <input class="form-control" placeholder="Name" [(ngModel)]="newItem.name" name="name" required>
+          </div>
+          <div class="col-md-2">
+            <input class="form-control" placeholder="Description" [(ngModel)]="newItem.description" name="description" required>
+          </div>
+          <div class="col-md-1">
+            <input class="form-control" placeholder="Price" type="number" [(ngModel)]="newItem.price" name="price" required>
+          </div>
+          <div class="col-md-2">
+            <input class="form-control" placeholder="Ingredients" [(ngModel)]="newItem.ingredients" name="ingredients">
+          </div>
+          <div class="col-md-1">
+            <input class="form-control" placeholder="Weight" [(ngModel)]="newItem.weight" name="weight">
+          </div>
+          <div class="col-md-2">
+            <input class="form-control" placeholder="Image URL" [(ngModel)]="newItem.image" name="image">
+          </div>
+          <div class="col-md-1 d-flex align-items-center">
+            <label class="me-1">Veg</label>
+            <input type="checkbox" [(ngModel)]="newItem.isVeg" name="isVeg">
+          </div>
+          <div class="col-md-1 d-flex align-items-center">
+            <label class="me-1">Active</label>
+            <input type="checkbox" [(ngModel)]="newItem.isActive" name="isActive">
+          </div>
+        </div>
+        <div class="mt-2">
+          <button type="submit" class="btn btn-primary btn-sm me-2">Save</button>
+          <button type="button" class="btn btn-secondary btn-sm" (click)="cancelAddItem()">Cancel</button>
+        </div>
+      </form>
+
       <table class="table table-bordered table-striped">
         <thead>
           <tr>
