--- a/quick-order-angular/src/app/user-panel/user-panel.component.html
+++ b/quick-order-angular/src/app/user-panel/user-panel.component.html
@@ -84,7 +84,9 @@
           </div>
         </div>
         <div class="mt-2">
-          <button type="submit" class="btn btn-primary btn-sm me-2">Save</button>
+          <button type="submit" class="btn btn-primary btn-sm me-2">
+            {{ editMode ? 'Update' : 'Save' }}
+          </button>
           <button type="button" class="btn btn-secondary btn-sm" (click)="cancelAddItem()">Cancel</button>
         </div>
       </form>
@@ -141,7 +143,7 @@
               <img [src]="item.image" alt="{{item.name}}" width="50" height="50">
             </td>
             <td>
-              <button class="btn btn-sm btn-primary me-1">Edit</button>
+              <button class="btn btn-sm btn-primary me-1" (click)="onEditItem(item)">Edit</button>
               <button class="btn btn-sm btn-danger" (click)="openDeleteModal(item.id)">Delete</button>
             </td>
           </tr>
