--- a/quick-order-angular/src/app/user-panel/user-panel.component.html
+++ b/quick-order-angular/src/app/user-panel/user-panel.component.html
@@ -123,6 +123,7 @@
           <tr>
             <th>Name</th>
             <th>Description</th>
+            <th>Category</th>
             <th>Price</th>
             <th>Weight</th>
             <th>Veg</th>
@@ -135,6 +136,7 @@
           <tr *ngFor="let item of paginatedItems">
             <td>{{item.name}}</td>
             <td>{{item.description}}</td>
+            <td>{{item.category}}</td>
             <td>{{item.price}}</td>
             <td>{{item.weight}}</td>
             <td>{{item.isVeg ? 'Yes' : 'No'}}</td>
